# vclib

./: CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  todo.md
.devcontainer/develop_clang/: Dockerfile  devcontainer.json
.devcontainer/develop_core/: devcontainer.json
.devcontainer/develop_core_clang/: Dockerfile  devcontainer.json
.devcontainer/develop_gcc/: devcontainer.json
.github/workflows/: Bindings_BuildAndTestWheel.yml  Bindings_BuildWheel.yml  BuildAndRunTests.yml  Core_BuildAndRunTests.yml  External_BuildAndRunTests.yml  Render_BuildAndRunTests.yml  Render_Emscripten_Build.yml  StandaloneExamples.yml  _standalone_examples_template.yml
WIP/: CREATE_RELEASE_ANALYSIS_AND_ROADMAP.md  release_plan.md
cmake/: vclibConfig.cmake.in  vclib_common_settings.cmake
docs/: index.md  requirements.txt
docs/pages/modules/: 0_introduction.md
docs/pages/user_guide/: 1_get_started.md
examples/: CMakeLists.txt
examples/000-mesh-basic/: main.cpp
examples/001-polymesh-basic/: main.cpp
examples/002-mesh-iterators/: main.cpp
examples/003-mesh-copy/: main.cpp
examples/004-mesh-normal/: main.cpp
examples/005-mesh-topology/: main.cpp
examples/006-mesh-stat/: main.cpp
examples/007-mesh-conversion/: main.cpp
examples/008-mesh-transform/: main.cpp
examples/009-mesh-custom-components/: main.cpp
examples/010-mesh-new-user-component/: foo_component.h  foo_mesh.h  main.cpp
examples/011-mesh-export-to-matrix/: main.cpp
examples/012-mesh-io-obj/: main.cpp
examples/013-mesh-io-off/: main.cpp
examples/014-mesh-io-ply/: main.cpp
examples/015-mesh-io-stl/: load_bimba_and_bunny.h
examples/016-mesh-clean/: main.cpp
examples/017-mesh-create/: main.cpp
examples/018-mesh-principal-curvature/: mesh_curvature.h
examples/019-mesh-sampling/: main.cpp  montecarlo_sampling.h
examples/020-mesh-smooth/: main.cpp
examples/021-mesh-sphere-intersection/: bimba_sphere_intersection.h
examples/022-edge-mesh-basic/: main.cpp
examples/023-polygon-earcut/: main.cpp
examples/024-distance/: main.cpp
examples/025-grid/: main.cpp
examples/026-crease-edges-mesh/: crease_edges_mesh.h
examples/027-convex-hull/: main.cpp
examples/028-topology-patch/: main.cpp
examples/700-processing-save-mesh/: main.cpp
examples/701-processing-load-mesh/: main.cpp
examples/702-processing-create-mesh/: main.cpp
examples/703-processing-laplacian-smoothing/: main.cpp
examples/704-processing-convex-hull/: main.cpp
examples/998-modules/: CMakeLists.txt  main.cpp
examples/999-misc/: main.cpp
examples/core/: CMakeLists.txt
examples/core/000-mesh-basic/: main.cpp
examples/core/001-polymesh-basic/: main.cpp
examples/core/002-mesh-iterators/: main.cpp
examples/core/003-mesh-copy/: main.cpp
examples/core/004-mesh-normal/: main.cpp
examples/core/005-mesh-topology/: main.cpp
examples/core/006-mesh-stat/: main.cpp
examples/core/007-mesh-conversion/: main.cpp
examples/core/008-mesh-transform/: main.cpp
examples/core/009-mesh-custom-components/: main.cpp
examples/core/010-mesh-new-user-component/: bar_component.h  bar_mesh.h  foo_component.h  foo_mesh.h  main.cpp
examples/core/011-mesh-export-to-matrix/: main.cpp
examples/core/012-mesh-io-obj/: main.cpp
examples/core/013-mesh-io-off/: main.cpp
examples/core/014-mesh-io-ply/: main.cpp
examples/core/015-mesh-io-stl/: load_bimba_and_bunny.h
examples/core/016-mesh-clean/: main.cpp
examples/core/017-mesh-create/: main.cpp
examples/core/018-mesh-principal-curvature/: mesh_curvature.h
examples/core/019-mesh-sampling/: main.cpp  montecarlo_sampling.h
examples/core/020-mesh-smooth/: main.cpp
examples/core/021-mesh-sphere-intersection/: bimba_sphere_intersection.h
examples/core/022-edge-mesh-basic/: main.cpp
examples/core/023-polygon-earcut/: main.cpp
examples/core/024-distance/: main.cpp
examples/core/025-grid/: main.cpp
examples/core/026-crease-edges-mesh/: crease_edges_mesh.h
examples/core/027-convex-hull/: main.cpp
examples/core/028-topology-patch/: main.cpp
examples/core/500-cxx20-modules/: main.cpp
examples/core/996-modules-no-lib/: CMakeLists.txt  main.cpp  test_module.ixx
examples/core/997-modules/: CMakeLists.txt  main.cpp
examples/emscripten/: CMakeLists.txt
examples/emscripten/00-hello-triangle/: CMakeLists.txt  hello_triangle_drawer.h  main.cpp
examples/emscripten/01-viewer/: CMakeLists.txt  main.cpp
examples/render/: CMakeLists.txt
examples/standalone/: CMakeLists.txt  README.md
examples/standalone/001-basic-mesh-creation/: CMakeLists.txt  main.cpp
examples/standalone/002-mesh-io/: CMakeLists.txt  main.cpp
include/vclib/: concepts.h  space.h
scripts/: generate_element.py  replace_headers.py  replace_headings.py
scripts/generators/: common.py  el_concept.py  el_container_concept.py  el_mesh_concept.py  el_module.py  el_range_concept.py  el_requirements.py  el_view.py  per_el_concepts.py
src/: vclib.ixx
src/vclib/: algorithms.ixx  concepts.ixx  exceptions.ixx  io.ixx  iterators.ixx  load_save.ixx  math.ixx  mesh.ixx  meshes.ixx  misc.ixx  processing.ixx  space.ixx  types.ixx  views.ixx
tests/: CMakeLists.txt
tests/000-static-asserts/: loggers.h  main.cpp  space.h
tests/001-trimesh-base/: main.cpp
tests/002-mesh-topology/: main.cpp
tests/003-mesh-conversions/: main.cpp
tests/004-mesh-custom-components/: main.cpp
tests/005-mesh-new-user-component/: main.cpp
tests/006-load-save-mesh-obj/: main.cpp
tests/007-load-save-mesh-off/: main.cpp
tests/008-load-save-mesh-ply/: main.cpp
tests/009-load-save-mesh-stl/: main.cpp
tests/010-mesh-clean/: main.cpp
tests/011-mesh-filter/: main.cpp
tests/012-kd-tree/: main.cpp
tests/013-mesh-update-normal/: main.cpp
tests/014-polymesh-base/: main.cpp
tests/015-mesh-copy-and-append/: main.cpp
tests/016-mesh-crease-edges/: main.cpp
tests/017-serialization/: main.cpp
tests/018-polygon/: main.cpp
tests/900-mesh-import-vcg/: main.cpp
tests/core/: CMakeLists.txt
vclib/core/: CMakeLists.txt  todo.md
vclib/processing/: CMakeLists.txt
vclib/render/: CMakeLists.txt
(+1441 files in other folders)
